<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">androidaction</string>

    <string name="hello">Hello World, Action</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>

    <string name="ok_str">OK</string>
    <string name="back_str">返回</string>
    <string name="home_str">Home</string>
    <string name="recent_str">最近</string>
    <string name="setting_str">Setting</string>

    <string name="accessibility_service_label">BackKeyService</string>
    <string name="accessibility_service_description">BackKeyService description</string>
    <string name="enable_acc_str">Goto Enable Accessibility</string>

</resources>
