<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />

    <TextView
            android:id="@+id/start_service_btn"
            android:text="@string/start_service"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="150dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/stop_service_btn"
            android:text="@string/stop_service"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/enable_acc"
            android:text="@string/enable_acc_str"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

</LinearLayout>

