<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:background="@color/alp_gray"
              android:gravity="center"
              android:layout_marginBottom="65dp"
              android:layout_width="match_parent"
              android:layout_height="52dp">


    <TextView android:id="@+id/home_btn"
              android:text="@string/home_str"
              android:textSize="17sp"
              android:textColor="@color/white"
              android:gravity="center"
              android:paddingTop="2dp"
              android:paddingBottom="2dp"
              android:layout_marginLeft="2dp"
              android:layout_marginRight="8dp"
              android:background="@drawable/rect_line_2px"
              android:layout_width="60dp" android:layout_height="48dp"/>

    <TextView android:id="@+id/back_btn"
              android:text="@string/back_str"
              android:textSize="18sp"
              android:textColor="@color/white"
              android:gravity="center"
              android:paddingTop="2dp"
              android:paddingBottom="2dp"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:background="@drawable/rect_line_2px"
              android:layout_width="60dp" android:layout_height="48dp"/>

    <TextView android:id="@+id/nothing_btn"
              android:text=""
              android:textSize="18sp"
              android:textColor="@color/white"
              android:gravity="center"
              android:paddingTop="2dp"
              android:paddingBottom="2dp"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:background="@drawable/rect_line_2px"
              android:layout_width="55dp" android:layout_height="48dp"/>

    <TextView android:id="@+id/recent_btn"
              android:text="@string/recent_str"
              android:textSize="18sp"
              android:textColor="@color/white"
              android:gravity="center"
              android:paddingTop="2dp"
              android:paddingBottom="2dp"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:background="@drawable/rect_line_2px"
              android:layout_width="60dp" android:layout_height="48dp"/>

    <TextView android:id="@+id/setting_btn"
              android:text="@string/setting_str"
              android:textSize="17sp"
              android:textColor="@color/white"
              android:gravity="center"
              android:paddingTop="2dp"
              android:paddingBottom="2dp"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="2dp"
              android:background="@drawable/rect_line_2px"
              android:layout_width="60dp" android:layout_height="48dp"/>

</LinearLayout>